<resources>
    <string name="app_name">HathMe</string>
    <string name="somethingError">Something error</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="pleaseWait">Please wait</string>
    <string name="continuee">Continue</string>
    <string name="rupeeSymbol">₹</string>
    <string name="dontHaveAcount">Don\'t have Account?</string>
    <string name="register">Register</string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="loginWithGoogle">Login with Google</string>
    <string name="or">Or</string>
    <string name="shorts">Shorts</string>
    <string name="title">Title</string>
    <string name="selectVideoFromGallery">Select video from gallery</string>
    <string name="recordVideoFromCamera">Record video from camera</string>
    <string name="loginNow">Login Now</string>
    <string name="httpsDeepLink">https://www.hathme.com/v1/</string>
    <string name="httpDeepLink">http://www.hathme.com/v1/</string>
    <string name="httpsDeepLinkShort">https://www.hathme.com.short/v1/</string>
    <string name="httpDeepLinkShort">http://www.hathme.com.short/v1/</string>
    <string name="registerNow">Register Now</string>
    <string name="name">Name</string>
    <string name="gpCoin">GP(Green Point)</string>
    <string name="rpCoin">RP(Red Point)</string>
    <string name="gpMsg">When we complete the order then we get the GP point and we can convert the GP point into currency.</string>
    <string name="rpMsg">When we rate a friend from our friends list, we get RP points equal to the number of GP points deducted.</string>
    <string name="downloads">Downloads</string>
    <string name="watch_later">Watch later</string>
    <string name="watch_live">Watch live</string>
    <string name="remove_watch_later">Remove from watch later</string>
    <string name="hide">Hide</string>
    <string name="share">Share</string>
    <string name="unsubscribe">unSubscribe</string>
    <string name="subscription">Subscriptions</string>
    <string name="subscribe">Subscribe</string>
    <string name="comments">Comments</string>
    <string name="history">History</string>
    <string name="create_reel">Create Reel</string>
    <string name="your_video">Your Videos</string>
    <string name="today">Today History</string>
    <string name="todayOnly">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="thisMonth">This month</string>
    <string name="lastMonth">Last month</string>
    <string name="mobile">Mobile</string>
    <string name="emailId">Email Id</string>
    <string name="selectAll">Select all</string>
    <string name="totalBill">Total bill</string>
    <string name="fileTypeError">File Type Error</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="user_list">User List</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="please_enter_group_name">Please Enter Group Name</string>
    <string name="post">Posts</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="referralCodeOpt">Referral Code(Optional)</string>
    <string name="getStarted">Get Started</string>
    <string name="byRegistering">By Registering, I agree to Hathme’s</string>
    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="submit">Submit</string>
    <string name="aboutUs">About Us</string>
    <string name="forgotPasswordQ">Forgot Password?</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="mobileVerification">Mobile Verification</string>
    <string name="otpSentTo">OTP Sent to</string>
    <string name="generatePin">Generate Pin</string>
    <string name="setPin">Set Pin</string>
    <string name="enterPin">Enter Pin</string>
    <string name="enter4DigitPin">Enter 4 digit Pin</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="select_video">Select Video From</string>
    <string name="select_payment_mode">Please select your payment mode</string>
    <string name="rateToUser">Rate to user</string>
    <string name="vTube">V Tube</string>
    <string name="favorites">Favorites</string>
    <string name="bankWithdrawal">Bank Withdrawal</string>
    <string name="receiveMoney">Receive Money</string>
    <string name="payMoney">Pay Money</string>
    <string name="addMoney">Add Money</string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notification_msg">Give Permission manually by Settings</string>
    <string name="gp">GP</string>
    <string name="rp">RP</string>
    <string name="viewCategory">View \nCategories</string>
    <string name="restaurants">Restaurants</string>
    <string name="nearByYou">Near by you</string>
    <string name="storeName">Store Name</string>
    <string name="orderProductList">Order Product List</string>
    <string name="driverDetails">Driver Details</string>
    <string name="maxSafetyDelivery">Max Safety\nDelivery</string>
    <string name="followMaxSafety">Follows all Max Safety measures to ensure your food is safe</string>
    <string name="anyOneCanScanQr">Anyone can scan this QR or send money to you on 8565448989. You will receive money in your linked bank account</string>
    <string name="shareQr">Share QR</string>
    <string name="paymentSettings">Payment Settings</string>
    <string name="upiLinkedBankAccounts"><![CDATA[Linked Bank Accounts]]></string>
    <string name="ordersTransactions"><![CDATA[Orders & Transactions]]></string>
    <string name="shoppingTransaction"><![CDATA[Shopping, Transactions & Others]]></string>
    <string name="cashbackOffers"><![CDATA[Cashback & Offers]]></string>
    <string name="rewardCashback"><![CDATA[Reward Points]]></string>
    <string name="profileSettings">Profile Settings</string>
    <string name="profileAddress"><![CDATA[Profile, Addresses, Security & Privacy, Notifications]]></string>
    <string name="helpSupport24"><![CDATA[Help & Support]]></string>
    <string name="customerSupportQuery">Customer Support, Your Queries, Frequently Asked Questions</string>
    <string name="search">Search</string>
    <string name="search_by_product_name">Search by product name</string>
    <string name="searchhistory">Search watch history</string>
    <string name="allCategories">All Categories</string>
    <string name="ratingReview">Rating/Review</string>
    <string name="deliveryTime">Delivery Time</string>
    <string name="discount">Discount</string>
    <string name="add">Add</string>
    <string name="seeAll">See All</string>
    <string name="moreItems">More Items</string>
    <string name="palakPaneer">Palak Paneer</string>
    <string name="writeSuggestion">Write Suggestions to restaurants</string>
    <string name="applyCoupon">Apply Coupon</string>
    <string name="tipYourHungerSaviour">Tip your hunger saviour</string>
    <string name="howItWorks">How it works</string>
    <string name="thankPartnerLeavingTip">Thank your delivery partner by leaving them a tip. 100% of the tip will go to your delivery partner.</string>
    <string name="other">Other</string>
    <string name="mostlyTipped">Mostly Tipped</string>
    <string name="iWantNoContact">I want a no-contact delivery</string>
    <string name="ourPartnerWillCall">Our delivery partner will call (or ring your doorbell) after reaching and leave the order at your door/gate (Not applicable for COD)</string>
    <string name="billDetails">Bill Details</string>
    <string name="itemTotal">Item Total</string>
    <string name="total">Total</string>
    <string name="deliveryFee">Delivery Fee</string>
    <string name="thisGoesPartner">This fee goes towards paying your Delivery Partner fairly</string>
    <string name="deliveryTip">Delivery Tip</string>
    <string name="taxCharges">Taxes and Charges</string>
    <string name="toPay">To Pay</string>
    <string name="reviewOrderAddress">Review your order and address details to avoid cancellations</string>
    <string name="noteChooseToCancel">Note: If you choose to cancel, you can do it within 60 seconds after placing order. Post which you will be charged 100% cancellation fee.</string>
    <string name="overview">Overview</string>
    <string name="readPolicy">Read Policy</string>
    <string name="addNew">Add New</string>
    <string name="deliveryToHome">Delivery to Home</string>
    <string name="makePayment">Make Payment</string>
    <string name="viewDetailedBill">View Detailed Bill</string>
    <string name="pleaseEnterName">Please enter name</string>
    <string name="pleaseEnterMobile">Please enter correct mobile number</string>
    <string name="pleaseEnterCorrectEmail">Please enter correct email id</string>
    <string name="pleaseEnterPassword">Please enter password</string>
    <string name="confirmPasswordNotMatch">Confirm password does not match</string>
    <string name="pleaseEnterOtp">Please enter OTP</string>
    <string name="pleaseEnterPin">Please enter PIN</string>
    <string name="login">Login</string>
    <string name="otp">OTP</string>
    <string name="updateProfile">Update Profile</string>
    <string name="productNotFound">Product Not Found</string>
    <string name="provideRequiredPermission">Provide required permission</string>
    <string name="upload">Upload</string>
    <string name="uploadPicture">Upload Picture</string>
    <string name="uploadVideo">Upload Video</string>
    <string name="selectVideo">Select Video</string>
    <string name="editAndUploadVideo">Edit and upload video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Logout</string>
    <string name="areYouSureLogout">Are you sure you want to logout?</string>
    <string name="leaveGroup">Are you sure you want to leave in this group?</string>
    <string name="deleteGroup">Are you sure you want to delete this group?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userVerification">User Verification</string>
    <string name="fullName">Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="enterCompleteAddress">Enter complete address</string>
    <string name="saveAddressAs">Save address as*</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="hotel">Hotel</string>
    <string name="completeAddress">Complete Address</string>
    <string name="floor">Floor (Optional)</string>
    <string name="nearByLandmark">Nearby Landmark (Optional)</string>
    <string name="saveAddress">Save Address</string>
    <string name="noAddressSelected">No address selected</string>
    <string name="enterYourName">Enter Your Name</string>
    <string name="enterYourEmail">Enter Your Email</string>
    <string name="addEmail">Add Email</string>
    <string name="cash">Cash</string>
    <string name="longVideoUpload">Upload Long Video</string>
    <string name="wallet">Wallet</string>
    <string name="shortVideoUpload">Upload Short Video</string>
    <string name="online">Online</string>
    <string name="paymentMode">Payment Mode</string>
    <string name="placeOrder">Place Order</string>
    <string name="scratchCard">Scratch Card</string>
    <string name="yourReturnPeriodWillBeOver">Your return period will be over if you take scratch card now.</string>
    <string name="cancel">Cancel</string>
    <string name="digit_alphabet">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="youHaveNotAddedAddress">You have not added any address. Kindly add new address to proceed.</string>
    <string name="addAddress">Add Address</string>
</resources>