<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/shorts"
        android:orderInCategory="200"
        android:title="@string/shorts"
        app:showAsAction="never" />
    <item
        android:id="@+id/createVideo"
        android:orderInCategory="200"
        android:title="@string/uploadVideo"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/history"
        android:orderInCategory="200"
        android:title="@string/history"
        app:showAsAction="never" />
    <item
        android:id="@+id/yourvideos"
        android:orderInCategory="200"
        android:title="@string/your_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/download"
        android:orderInCategory="200"
        android:title="@string/downloads"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/subscription"
        android:orderInCategory="200"
        android:title="@string/subscription"
        app:showAsAction="never" />
    <item
        android:id="@+id/watchlater"
        android:orderInCategory="200"
        android:title="@string/watch_later"
        app:showAsAction="never" />


</menu>