<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangular_top_radius"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:ignore="SpUsage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/fira_sans_sem_bold"
        android:text="@string/uploadVideo"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/tvNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_rectangular_border"
        android:fontFamily="@font/fira_sans_regular"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/longVideoUpload"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tvShortVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_rectangular_border"
        android:fontFamily="@font/fira_sans_regular"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/shortVideoUpload"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/_13sdp" />




</LinearLayout>