<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@drawable/rectangular_top_radius"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:ignore="SpUsage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_sem_bold"
        android:text="@string/enterCompleteAddress"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/_13sdp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_white_no_radius"
        android:backgroundTint="#33DADADA"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_map_marker_double" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_toEndOf="@+id/ivLocation"
            android:fontFamily="@font/fira_sans_medium"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tvSubAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAddress"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_toEndOf="@+id/ivLocation"
            android:fontFamily="@font/fira_sans_regular"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/fira_sans_regular"
        android:text="@string/saveAddressAs"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_border_less_radius"
            android:fontFamily="@font/fira_sans_regular"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/home"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/tvWork"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rectangular_grey_border_less_radius"
            android:fontFamily="@font/fira_sans_regular"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/work"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/tvHotel"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rectangular_grey_border_less_radius"
            android:fontFamily="@font/fira_sans_regular"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/hotel"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/tvOther"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rectangular_grey_border_less_radius"
            android:fontFamily="@font/fira_sans_regular"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/other"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etCompleteAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/et_rectangular_border"
        android:fontFamily="@font/fira_sans_regular"
        android:hint="@string/completeAddress"
        android:inputType="textCapSentences"
        android:maxLength="100"
        android:padding="@dimen/_10sdp" />

    <EditText
        android:id="@+id/etFloor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/et_rectangular_border"
        android:fontFamily="@font/fira_sans_regular"
        android:hint="@string/floor"
        android:inputType="textCapSentences"
        android:maxLength="100"
        android:padding="@dimen/_10sdp" />

    <EditText
        android:id="@+id/etLandmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/et_rectangular_border"
        android:fontFamily="@font/fira_sans_regular"
        android:hint="@string/nearByLandmark"
        android:inputType="textCapSentences"
        android:maxLength="100"
        android:padding="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_rectangular"
        android:gravity="center"
        android:padding="@dimen/_13sdp"
        android:text="@string/saveAddress"
        android:fontFamily="@font/fira_sans_regular"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>