<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangular_top_radius"
    android:orientation="vertical"
    tools:ignore="SpUsage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/fira_sans_regular"
            android:text="@string/scratchCard"
            android:textAlignment="center"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_18sdp"
            tools:ignore="SpUsage" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/yourReturnPeriodWillBeOver"
        android:fontFamily="@font/fira_sans_regular"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/rectangular_border_red"
            android:gravity="center"
            android:padding="@dimen/_13sdp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="@dimen/_15sdp" />


        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/rectangular_border_red"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/_13sdp"
            android:text="@string/continuee"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>


</LinearLayout>